argo-workflows/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-workflow
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /argo-workflow
    rewrite:
      uri: /argo-workflow
    route:
    - destination:
        host: argo-server.kubeflow.svc.cluster.local
        port:
          number: 2746
