argo-workflows/autorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-argo-ui
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - {}
  # - from:
  #   - source:
  #       namespaces:
  #       - istio-system
  #       - kubeflow
  #   to:
  #   - operation:
  #       paths:
  #       - /argo-workflow
